--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -140,7 +140,7 @@
  
 <!--footer-->
 <footer>
-    <div class="footer">
+    <div class="footer footer2">
           <h5 class="footer_header">ohmyfood</h5>
         <p class="proposerUnRestaurant footerInfos">
           <i class="fas fa-utensils"></i>Proposer un restaurant
