--- a/pages_html/leDeliceDesSens.html
+++ b/pages_html/leDeliceDesSens.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../desing/default.css"/>
-  <title>Ohmyfood_le Délice des sens</title>
+  <title>Ohmyfood_Le délice des sens</title>
   <script
   src="https://kit.fontawesome.com/04b5a3f05a.js"
   crossorigin="anonymous"
@@ -27,144 +27,120 @@
 
  <main>  
     <section class="restaurant"> 
-            <div class="Restaurant_img ">
-              <img
-                  src="../img/restaurants/Le-délice-des-sens.jpg"
-                    alt="La palette du goût"
-                    class="paletteDuGout_img"/>  
-            </div>
-     <section class="restaurantEntresPlats">
-             <div class="nomDuRestaurant_titre">
-                     <h2>le délice des sens</h2>
-                     <div class="section_restaurants_carte_description_souhait icone_coeur">
-                        <i class="far fa-heart fa-heart-1 heartGout"></i>
-                        <i class="fas fa-heart heartHover"></i>
+              <div class="Restaurant_img ">
+                <img
+                    src="../img/restaurants/Le-délice-des-sens.jpg"
+                      alt="Le délice des sens"
+                      class="paletteDuGout_img"/>  
+              </div>
+            <section class="restaurantEntresPlats">
+                  <div class="nomDuRestaurant_titre">
+                      <h2>Le délice des sens</h2>
+                      <div class="section_restaurants_carte_description_souhait icone_coeur">
+                          <i class="far fa-heart fa-heart-1 heartGout"></i>
+                          <i class="fas fa-heart heartHover"></i>
                       </div>
-              </div>  
-       <section class="menu">
-        <article class="carteMenuEntree carteMenu">
-          <div class="carteHeader">
-            <h3>ENTRÉES <hr class="trait"></h3> 
-          </div>
-          <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Tartare de thon</h4>
-                  <div class="menuEntreeInfos menuDescriptionPrix">
-                    <p class="menuEntreeInfosCompliment">
-                   Assaisoné au yuzi
-                    </p>
-                    <p class="menuEntreeInfosPrix">25€</p>
-                  </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Bouchée de homard croustillant</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-                Et sa farandole de petits légumes
-                </p>
-                <p class="menuEntreeInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Velouté de crèpes</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-                   Aux truffes
-                </p>
-                <p class="menuEntreeInfosPrix">20€</p>
-              </div>
-            </div>
-        </article>
-        <article class="carteMenuPlats carteMenu">
-          <div>
-            <h3>PLATS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Poulet roti aux herbes de province</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                   Et sa crème de truffe
-                </p>
-                <p class="MenuPlatsInfosPrix">40€</p>
-              </div>
-            </div>
-          </div>
-           <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Langouste rotoe</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                Et ses légumes de saison
-                </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-            <div class="MenuPlats menuX">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Cote de boeuf angus</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-             Et sa purée de panais
-                </p>
-                <p class="MenuPlatsInfosPrix">44€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="carteMenuDesserts carteMenu">
-          <div>
-            <h3>DESSERTS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Farandole de desserts</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-                 Du chef
-                </p>
-                <p class="MenuPlatsInfosPrix">18€</p>
-              </div>
-            </div>
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Crème brulée</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-                 Revistée
-                </p>
-                <p class="MenuPlatsInfosPrix">22€</p>
-              </div>
-            </div>
-          </div>
-    <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Tiramisu</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-    A la noisette
-                </p>
-                <p class="MenuPlatsInfosPrix">23€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-   </section>
-         </section>
+                  </div>  
+                 <div class="menus">
+                    <article class="menu">
+                    <div class="carteHeader">
+                      <h3>ENTRÉES <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Tartare de thon</p>
+                          <p class="menuSousTitre"> Assaisoné au yuzi</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">25€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Bouchée de homard croustillant</p>
+                          <p class="menuSousTitre"> Et sa farandole de petits légumes</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Velouté de crèpes</p>
+                            <p class="menuSousTitre"> Aux truffes</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">20€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>PLATS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Poulet roti aux herbes de province</p>
+                          <p class="menuSousTitre">Et sa crème de truffe</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">40€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Langouste rotoe</p>
+                          <p class="menuSousTitre"> Et ses légumes de saison</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Cote de boeuf angus</p>
+                            <p class="menuSousTitre">Et sa purée de panais</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">44€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>DESSERTS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Farandole de desserts</p>
+                          <p class="menuSousTitre">Du chef</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">18€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Crème brulée<</p>
+                          <p class="menuSousTitre">Revisité</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">22€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">MTiramisu</p>
+                            <p class="menuSousTitre">A la noisette</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">23€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                 </div>
+          </section>
+    </section>
+
        <section class="commander">
           <button class="btn_commander">Commander</button>
        </section>
      
  </main>
+
+
+ 
 <!--footer-->
 <footer>
-    <div class="footer">
+    <div class="footer footer2">
           <h5 class="footer_header">ohmyfood</h5>
         <p class="proposerUnRestaurant footerInfos">
           <i class="fas fa-utensils"></i>Proposer un restaurant
