--- a/pages_html/laNoteEnchantee.html
+++ b/pages_html/laNoteEnchantee.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../desing/default.css"/>
-  <title>Ohmyfood_La Note Enchantée</title>
+  <title>Ohmyfood_À la française</title>
   <script
   src="https://kit.fontawesome.com/04b5a3f05a.js"
   crossorigin="anonymous"
@@ -27,155 +27,127 @@
 
  <main>  
     <section class="restaurant"> 
-            <div class="Restaurant_img ">
-              <img
-                  src="../img/restaurants/La-note-enchantée.jpg"
-                    alt="La palette du goût"
-                    class="paletteDuGout_img"/>  
-            </div>
-     <section class="restaurantEntresPlats">
-             <div class="nomDuRestaurant_titre">
-                     <h2>La note enchantée</h2>
-                     <div class="section_restaurants_carte_description_souhait icone_coeur">
-                        <i class="far fa-heart fa-heart-1 heartGout"></i>
-                        <i class="fas fa-heart heartHover"></i>
+              <div class="Restaurant_img ">
+                <img
+                    src="../img/restaurants/La-note-enchantée.jpg"
+                      alt="La palette du goût"
+                      class="paletteDuGout_img"/>  
+              </div>
+            <section class="restaurantEntresPlats">
+                  <div class="nomDuRestaurant_titre">
+                      <h2>La note enchantée</h2>
+                      <div class="section_restaurants_carte_description_souhait icone_coeur">
+                          <i class="far fa-heart fa-heart-1 heartGout"></i>
+                          <i class="fas fa-heart heartHover"></i>
                       </div>
-              </div>  
-       <section class="menu">
-        <article class="carteMenuEntree carteMenu">
-          <div class="carteHeader">
-            <h3>ENTRÉES <hr class="trait"></h3> 
-          </div>
-          <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Ravioles de foie gras</h4>
-                  <div class="menuEntreeInfos menuDescriptionPrix">
-                    <p class="menuEntreeInfosCompliment">
-                   Accompagnés de leur crème à la truffe
-                    </p>
-                    <p class="menuEntreeInfosPrix">25€</p>
-                  </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Caviar osciètre</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-               Sur blini à la farine de blé noir
-                </p>
-                <p class="menuEntreeInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-            <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Homard et espuma de...</h4>
-                  <div class="menuEntreeInfos menuDescriptionPrix">
-                    <p class="menuEntreeInfosCompliment">
-                  Mariné aux zests d'orange
-                    </p>
-                    <p class="menuEntreeInfosPrix">20€</p>
-                  </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Foie gras de canard cuit entier</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-                        Confiture de figue et pain toasté
-                </p>
-                <p class="menuEntreeInfosPrix">35€</p>
-              </div>
-            </div>
-        </article>
-        <article class="carteMenuPlats carteMenu">
-          <div>
-            <h3>PLATS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Noix de coquilles Saint-Jacques</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                  Sur lit de purée de céleri-rave
-                </p>
-                <p class="MenuPlatsInfosPrix">40€</p>
-              </div>
-            </div>
-          </div>
-           <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Langoustine poêlée</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                Purée de patate douce
-                </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-            <div class="MenuPlats menuX">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Mijoté de queue de boeufe</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-           Et riz sauvage aux zestes de citron
-                </p>
-                <p class="MenuPlatsInfosPrix">44€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="carteMenuDesserts carteMenu">
-          <div>
-            <h3>DESSERTS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Macaron noisette et chocolat</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-             Glace au caramel brun et sel de Guérande
-                </p>
-                <p class="MenuPlatsInfosPrix">18€</p>
-              </div>
-            </div>
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Baba au rhum revisité</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-               Avec son coulis de citron
-                </p>
-                <p class="MenuPlatsInfosPrix">22€</p>
-              </div>
-            </div>
-          </div>
-    <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Tarte au citron meringuée</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-            Déstructurée
-                </p>
-                <p class="MenuPlatsInfosPrix">23€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-   </section>
-         </section>
+                  </div>  
+                 <div class="menus">
+                    <article class="menu">
+                    <div class="carteHeader">
+                      <h3>ENTRÉES <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Ravioles de foie gras</p>
+                          <p class="menuSousTitre"> Accompagnés de leur crème à la truffe</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">25€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Caviar osciètre</p>
+                          <p class="menuSousTitre">Sur blini à la farine de blé noir</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Homard et espuma de</p>
+                            <p class="menuSousTitre">Mariné aux zests d'orange</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">20€</span>
+                            </div>
+                          </li>
+
+                              <li>
+                            <p class="menuTitre">Foie gras de canard cuit entier</p>
+                            <p class="menuSousTitre">Confiture de figue et pain toasté</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">35€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>PLATS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Noix de coquilles Saint-Jacques</p>
+                          <p class="menuSousTitre">Sur lit de purée de céleri-rave</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">40€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Langoustine poêlée</p>
+                          <p class="menuSousTitre">Purée de patate douce</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Mijoté de queue de boeufe</p>
+                            <p class="menuSousTitre">Et riz sauvage aux zestes de citron</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">44€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>DESSERTS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Macaron noisette et chocolat</p>
+                          <p class="menuSousTitre">Glace au caramel brun et sel de Guérande</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">18€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Baba au rhum revisité</p>
+                          <p class="menuSousTitre">Avec son coulis de citron</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">22€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Tarte au citron meringuée</p>
+                            <p class="menuSousTitre">Déstructurée</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">23€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                 </div>
+          </section>
+    </section>
+
        <section class="commander">
           <button class="btn_commander">Commander</button>
        </section>
      
  </main>
+
+ 
 <!--footer-->
 <footer>
-    <div class="footer">
+    <div class="footer footer2">
           <h5 class="footer_header">ohmyfood</h5>
         <p class="proposerUnRestaurant footerInfos">
           <i class="fas fa-utensils"></i>Proposer un restaurant
