--- a/pages_html/laPaletteDuGout.html
+++ b/pages_html/laPaletteDuGout.html
@@ -27,144 +27,120 @@
 
  <main>  
     <section class="restaurant"> 
-            <div class="Restaurant_img ">
-              <img
-                  src="../img/restaurants/La-palette-du-goût.jpg"
-                    alt="La palette du goût"
-                    class="paletteDuGout_img"/>  
-            </div>
-     <section class="restaurantEntresPlats">
-             <div class="nomDuRestaurant_titre">
-                     <h2>La palette du goût</h2>
-                     <div class="section_restaurants_carte_description_souhait icone_coeur">
-                        <i class="far fa-heart fa-heart-1 heartGout"></i>
-                        <i class="fas fa-heart heartHover"></i>
+              <div class="Restaurant_img ">
+                <img
+                    src="../img/restaurants/La-palette-du-goût.jpg"
+                      alt="La palette du goût"
+                      class="paletteDuGout_img"/>  
+              </div>
+            <section class="restaurantEntresPlats">
+                  <div class="nomDuRestaurant_titre">
+                      <h2>La palette du goût</h2>
+                      <div class="section_restaurants_carte_description_souhait icone_coeur">
+                          <i class="far fa-heart fa-heart-1 heartGout"></i>
+                          <i class="fas fa-heart heartHover"></i>
                       </div>
-              </div>  
-       <section class="menu">
-        <article class="carteMenuEntree carteMenu">
-          <div class="carteHeader">
-            <h3>ENTRÉES <hr class="trait"></h3> 
-          </div>
-          <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Fricassée d'escargot</h4>
-                  <div class="menuEntreeInfos menuDescriptionPrix">
-                    <p class="menuEntreeInfosCompliment">
-                    Au piment d'Espelette
-                    </p>
-                    <p class="menuEntreeInfosPrix">25€</p>
-                  </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Foie gras de canard mi-cuit</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-                Et ses copeaux de truffe noire
-                </p>
-                <p class="menuEntreeInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-                <div class="carteMenuEntreeDescription menuDescription">
-            <div class="menuEntree">
-              <h4>Oeuf au plat</h4>
-              <div class="menuEntreeInfos menuDescriptionPrix">
-                <p class="menuEntreeInfosCompliment">
-                      Assaisonné à la truffe sur lit de caviar
-                </p>
-                <p class="menuEntreeInfosPrix">20€</p>
-              </div>
-            </div>
-        </article>
-        <article class="carteMenuPlats carteMenu">
-          <div>
-            <h3>PLATS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Filet de boeuf aux herbes</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                   Accompagné de sa ribambelle de légumes
-                </p>
-                <p class="MenuPlatsInfosPrix">40€</p>
-              </div>
-            </div>
-          </div>
-           <div class="MenuPlats">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Parmentier de queue de boeuf</h4>
-              <div class="MenuPlatsInfos menuDescriptionPrix">
-                <p class="MenuPlatsInfosIngredients">
-                  À la truffe noire sur sa purée de panais
-                </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-            <div class="MenuPlats menuX">
-            <div class="MenuPlatsInfos menuDescription">
-              <h4>Filet de turbot</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-                  Aux agrumes
-                </p>
-                <p class="MenuPlatsInfosPrix">35€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="carteMenuDesserts carteMenu">
-          <div>
-            <h3>DESSERTS <hr class="trait"></h3> 
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Paris-Brest</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-                 Revisité
-                </p>
-                <p class="MenuPlatsInfosPrix">18€</p>
-              </div>
-            </div>
-          </div>
-          <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Macaron au chocolat d'exception</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-                   Et glace à la vanille de Madagascar
-                </p>
-                <p class="MenuPlatsInfosPrix">22€</p>
-              </div>
-            </div>
-          </div>
-    <div class="MenuDesserts">
-            <div class="MenuDessertsInfos menuDescription">
-              <h4>Mousse au chocolat</h4>
-              <div class="MenuPlatsInfosIngredients menuDescriptionPrix">
-                <p>
-          Au piment d'Espelette et à la truffe noire
-                </p>
-                <p class="MenuPlatsInfosPrix">23€</p>
-              </div>
-            </div>
-          </div>
-        </article>
-   </section>
-         </section>
+                  </div>  
+                 <div class="menus">
+                    <article class="menu">
+                    <div class="carteHeader">
+                      <h3>ENTRÉES <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Fricassée d'escargot</p>
+                          <p class="menuSousTitre">Au piment d'Espelette</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">25€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Foie gras de canard mi-cuit</p>
+                          <p class="menuSousTitre">Et ses copeaux de truffe noire</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Oeuf au plat</p>
+                            <p class="menuSousTitre">Assaisonné à la truffe sur lit de caviar</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">20€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>PLATS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Filet de boeuf aux herbes</p>
+                          <p class="menuSousTitre">Accompagné de sa ribambelle de légumes</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">40€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Parmentier de queue de boeuf</p>
+                          <p class="menuSousTitre">A la truffe noire sur sa purée de panais</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">35€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Filet de turbot</p>
+                            <p class="menuSousTitre">Aux agrumes</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">44€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                   <article class="menu">
+                    <div class="carteHeader">
+                      <h3>DESSERTS <hr class="trait"></h3> 
+                    </div>
+                    <ol class="menuEntree">
+                        <li>
+                          <p class="menuTitre">Paris-Brest</p>
+                          <p class="menuSousTitre">Revisité</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">18€</span>
+                          </div>
+                        </li>
+                        <li>
+                          <p class="menuTitre">Macaron au chocolat d'exception</p>
+                          <p class="menuSousTitre">Et glace à la vanille de Madagascar</p>
+                          <div class="menuConfirmation">
+                            <span class="menuPrix">22€</span>
+                          </div>
+                          </li>
+                          <li>
+                            <p class="menuTitre">Mousse au chocolat</p>
+                            <p class="menuSousTitre">Au piment d'Espelette et à la truffe noire</p>
+                            <div class="menuConfirmation">
+                              <span class="menuPrix">23€</span>
+                            </div>
+                          </li>
+                    </ol>         
+                  </article>
+                 </div>
+          </section>
+    </section>
+
        <section class="commander">
           <button class="btn_commander">Commander</button>
        </section>
      
  </main>
+
+
+ 
 <!--footer-->
 <footer>
-    <div class="footer">
+    <div class="footer footer2">
           <h5 class="footer_header">ohmyfood</h5>
         <p class="proposerUnRestaurant footerInfos">
           <i class="fas fa-utensils"></i>Proposer un restaurant
