--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <div id="chargement">
+			<div id="chargementSpinner">
+				<span class="spinner" id="spinner-1"></span>
+			</div>
+		</div>
+
   <header>
     <nav class="header">
        <h1> <!--<img src="../img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/> <br>--> <img src="./img/logo/ohmyfood.png" alt="logo_ohmyfood" class="logo"/></h1>
