Ajout Animation_apparitionMenu

--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -42,7 +42,7 @@
                       </div>
                   </div>  
                  <div class="menus">
-                    <article class="menu">
+                    <article class="menu menu-1">
                     <div class="carteHeader">
                       <h3>ENTRÉES <hr class="trait"></h3> 
                     </div>
@@ -70,7 +70,7 @@
                           </li>
                     </ol>         
                   </article>
-                   <article class="menu">
+                   <article class="menu menu-2">
                     <div class="carteHeader">
                       <h3>PLATS <hr class="trait"></h3> 
                     </div>
@@ -98,7 +98,7 @@
                           </li>
                     </ol>         
                   </article>
-                   <article class="menu">
+                   <article class="menu menu-3">
                     <div class="carteHeader">
                       <h3>DESSERTS <hr class="trait"></h3> 
                     </div>
