--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -70,7 +70,7 @@
                           </li>
                     </ol>         
                   </article>
-                   <article class="menu menu-2">
+                   <article class="menu menu-2" id="arro-2">
                     <div class="carteHeader">
                       <h3>PLATS <hr class="trait"></h3> 
                     </div>
