--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="section_restaurants_carte_description_souhait icone_coeur">
                       <i class="far fa-heart fa-heart-1"></i>
-                      <i class="fas fa-heart heartHover"></i>
+                      <i class="fas fa-heart heartHover like"></i>
                     </div>
               </div>
 	      	</a>
@@ -106,7 +106,7 @@
                     </div>
                  <div class="section_restaurants_carte_description_souhait icone_coeur">
                       <i class="far fa-heart fa-heart-1"></i>
-                      <i class="fas fa-heart heartHover"></i>
+                      <i class="fas fa-heart heartHover like"></i>
                     </div>
               </div>
 	      	</a>
@@ -127,7 +127,7 @@
                     </div>
                      <div class="section_restaurants_carte_description_souhait icone_coeur">
                       <i class="far fa-heart fa-heart-1"></i>
-                      <i class="fas fa-heart heartHover"></i>
+                      <i class="fas fa-heart heartHover like"></i>
                     </div>
               </div>
 	      	</a>
@@ -147,7 +147,7 @@
                     </div>
                       <div class="section_restaurants_carte_description_souhait icone_coeur">
                       <i class="far fa-heart fa-heart-1"></i>
-                      <i class="fas fa-heart heartHover"></i>
+                      <i class="fas fa-heart heartHover like"></i>
                     </div>
               </div>
 	      	</a>
