--- a/pages_html/aLaFrançaise.html
+++ b/pages_html/aLaFrançaise.html
@@ -38,7 +38,7 @@
                       <h2>À la française</h2>
                       <div class="section_restaurants_carte_description_souhait icone_coeur">
                           <i class="far fa-heart fa-heart-1 heartGout"></i>
-                          <i class="fas fa-heart heartHover"></i>
+                          <i class="fas fa-heart  like1 heartHover"></i>
                       </div>
                   </div>  
                  <div class="menus">
